fix exessive wrapping when dragging columns

--- a/src/app/torrents-table/torrents-table.component.scss
+++ b/src/app/torrents-table/torrents-table.component.scss
@@ -101,7 +101,7 @@ mat-header-row {
               0 8px 10px 1px rgba(0, 0, 0, 0.14),
               0 3px 14px 2px rgba(0, 0, 0, 0.12);
 
-  padding: 20px;
+  padding: 5px;
 }
 
 .cdk-drag-placeholder {
